--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "dependencies": {
     "cors": "2.8.5",
     "express": "4.18.2",
+    "pg": "^8.11.3",
     "zod": "3.22.4"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.0"
   }
 }
