--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node ./app.js",
+    "start:Postgres": "node --watch ./server-postgres.js",
+    "start:local": "node --watch ./local.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
